<resources>
    <string name="app_name">TraceMe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="not_a_member">Not a member?</string>
    <string name="Login">Login</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="start_tracking">Start tracking:</string>
    <string name="share_location">Share location</string>
    <string name="bus">Bus</string>
    <string name="car">Car</string>
    <string name="walk">Walk</string>
    <string name="channel_name">TraceMe</string>
    <string name="channel_description">Location sharing notification</string>
    <string name="on_foot">on foot</string>
    <string name="personal_car">personal car</string>
    <string name="walking">walking</string>
    <string name="mean_of_travel">Mean of travel:</string>
    <string name="location_sharing_is_turned_on">Location sharing is turned ON</string>
    <string name="location_sharing_is_turned_off">Location sharing is turned OFF</string>
    <string name="location_sharing_is_off">Location sharing is OFF</string>
    <string name="location_sharing_is_on">Location sharing is ON</string>
    <string name="settings">settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dark_theme">Dark theme</string>
    <string name="logout">LogOut</string>
    <string name="subway">subway</string>
    <string name="statistics">statistics</string>
    <string name="travel_statistcks">Travel statistics</string>
    <string name="location_statistics">Location statistics</string>
    <string name="most_frequent_location">Most frequent location:</string>
</resources>
